# git-mesh

./: LICENSE  Makefile  README.md  pyproject.toml
src/git_mesh/: cli.py
