[tool.poetry]
name = "git-mesh"
version = "0.1.0"
description = ""
authors = ["sspillane <sspillane@maystreet.com>"]
readme = "README.md"
packages = [{include = "git_mesh", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
sh = "^1.14.3"
click = "^8.1.3"
rich = "^12.6.0"

[tool.poetry.scripts]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts= "--doctest-modules -ra -q"